feat/checkup_e_quotes_tables
